# lsql

./: .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: COMMIT_CONVENTION.md  PULL_REQUEST_TEMPLATE.md  workflows.yaml
.github/workflows/: publish.yml
crates/lsql-parser/: Cargo.toml
crates/lsql-parser/src/: lib.rs
crates/lsql-tokenizer/: Cargo.toml
crates/lsql-tokenizer/src/: lib.rs
docs/: developer_guide.md  themes.md
docs/examples/: add_limit_clause.md
src/: cli.rs  display.rs  files.rs  filter.rs  fs.rs  main.rs  parser.rs  shell.rs  theme.rs
src/antlr/: LSQLParser.g4  LSQLexer.g4  mod.rs
src/antlr/.antlr/: LSQLexer.interp  LSQLexer.java  LSQLexer.tokens
src/parser/: condition.rs  lsql.pest  mod.rs  query.rs  selection.rs  types.rs  value.rs
