[package]
name = "lsql"
version = "0.1.0"
edition = "2021"
exclude = [".github/**", "docs/**", "media/**", "scripts/**"]
readme = "README.md"
authors = ["LSql Contributors"]
description = "A command-line utility that queries files and directories using SQL-like syntax"


[dependencies]
walkdir = "2.5.0"
chrono = "0.4.38"
comfy-table = "7.1.1"
pest = "2.6"
pest_derive = "2.6"
clap = { version = "4.5.1", features = ["derive"] }
rustyline = "12.0.0"
rustyline-derive = "0.9.0"
colored = "2.1.0"
log = "0.4.21"
env_logger = "0.11.2"