[package]
name = "lsql"
version = "0.0.1"
edition = "2021"
exclude = [".github/**", "docs/**", "media/**", "scripts/**"]
readme = "README.md"
authors = ["faltawy"]
description = "A command-line utility that queries files and directories using SQL-like syntax"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
walkdir = "2.5.0"
chrono = "0.4.40"
comfy-table = "7.1.1"
pest = "2.6"
pest_derive = "2.6"
clap = { version = "4.5.1", features = ["derive"] }
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
colored = "3.0.0"
log = "0.4.21"
env_logger = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
dirs = "6.0.0"
reedline = "0.38.0"
nu-ansi-term = "0.50.1"
nu-plugin = "0.102.0"
syntect = "5.1.0"
miette = { version = "7.5.0", features = ["fancy"] }
regex = "1.10.3"
